# API-Quiz

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
database/: database_config.py  models.py  schemas.py
